force-app/main/default/objects/Snapshot__c/Snapshot__c.object-meta.xml
<CustomObject>
    <description>Used for analytical snapshots</description>
    <label>Snapshot</label>
    <nameField>
        <label>Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>