force-app/main/default/objects/Snapshot__c/fields/AcctName__c.field-meta.xml
<CustomField>
    <fullName>AcctName__c</fullName>
    <label>Acct Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>