force-app/main/default/objects/Snapshot__c/fields/AcctOwner__c.field-meta.xml
<CustomField>
    <fullName>AcctOwner__c</fullName>
    <label>Acct Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>