force-app/main/default/objects/Snapshot__c/fields/AcctRecordType__c.field-meta.xml
<CustomField>
    <fullName>AcctRecordType__c</fullName>
    <label>Acct Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>