force-app/main/default/objects/Snapshot__c/fields/Case_Area_of_Focus__c.field-meta.xml
<CustomField>
    <fullName>Case_Area_of_Focus__c</fullName>
    <label>Case Area of Focus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>