force-app/main/default/objects/Snapshot__c/fields/Case_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Case_Last_Modified_By__c</fullName>
    <label>Case Last Modified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>