force-app/main/default/objects/Snapshot__c/fields/Case_Meeting_Connection_Method__c.field-meta.xml
<CustomField>
    <fullName>Case_Meeting_Connection_Method__c</fullName>
    <label>Case Meeting Connection Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>