force-app/main/default/objects/Snapshot__c/fields/Case_Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Opened_Date__c</fullName>
    <label>Case Opened Date</label>
    <type>Date</type>
</CustomField>