force-app/main/default/objects/Snapshot__c/fields/Case_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Phone_Type__c</fullName>
    <label>Case Phone Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>