force-app/main/default/objects/Snapshot__c/fields/Case_Return_to_Group_Member__c.field-meta.xml
<CustomField>
    <fullName>Case_Return_to_Group_Member__c</fullName>
    <label>Case Return to Group Member</label>
    <length>255</length>
    <type>Text</type>
</CustomField>