force-app/main/default/objects/Snapshot__c/fields/Case_s_PGi_Company__c.field-meta.xml
<CustomField>
    <fullName>Case_s_PGi_Company__c</fullName>
    <label>Case&apos;s PGi Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>