force-app/main/default/objects/Snapshot__c/fields/Case_Symptom_Sub__c.field-meta.xml
<CustomField>
    <fullName>Case_Symptom_Sub__c</fullName>
    <label>Case Symptom Sub</label>
    <length>255</length>
    <type>Text</type>
</CustomField>