force-app/main/default/objects/Snapshot__c/fields/OpptyAmountconverted__c.field-meta.xml
<CustomField>
    <fullName>OpptyAmountconverted__c</fullName>
    <label>Oppty Amount (converted)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>