force-app/main/default/objects/Snapshot__c/fields/OpptyCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>OpptyCreatedDate__c</fullName>
    <label>Oppty Created Date</label>
    <type>Date</type>
</CustomField>