force-app/main/default/objects/Snapshot__c/fields/OpptyCurrency__c.field-meta.xml
<CustomField>
    <fullName>OpptyCurrency__c</fullName>
    <label>Oppty Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>