force-app/main/default/objects/Snapshot__c/fields/OpptyForecastCategory__c.field-meta.xml
<CustomField>
    <fullName>OpptyForecastCategory__c</fullName>
    <label>Oppty Forecast Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>