force-app/main/default/objects/Snapshot__c/fields/OpptyForecastStatus__c.field-meta.xml
<CustomField>
    <fullName>OpptyForecastStatus__c</fullName>
    <label>Oppty Forecast Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>