force-app/main/default/objects/Snapshot__c/fields/OpptyName__c.field-meta.xml
<CustomField>
    <fullName>OpptyName__c</fullName>
    <label>Oppty Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>