force-app/main/default/objects/Snapshot__c/fields/OpptyOwnersMgr__c.field-meta.xml
<CustomField>
    <fullName>OpptyOwnersMgr__c</fullName>
    <label>Oppty Owner&apos;s Mgr</label>
    <length>100</length>
    <type>Text</type>
</CustomField>