force-app/main/default/objects/Snapshot__c/fields/OpptyOwnersRegion__c.field-meta.xml
<CustomField>
    <fullName>OpptyOwnersRegion__c</fullName>
    <label>Oppty Owner&apos;s Region</label>
    <length>99</length>
    <type>Text</type>
</CustomField>