force-app/main/default/objects/Snapshot__c/fields/OpptyOwnersSVP__c.field-meta.xml
<CustomField>
    <fullName>OpptyOwnersSVP__c</fullName>
    <label>Oppty Owner&apos;s SVP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>