force-app/main/default/objects/Snapshot__c/fields/OpptyProbability__c.field-meta.xml
<CustomField>
    <fullName>OpptyProbability__c</fullName>
    <label>Oppty Probability %</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>