force-app/main/default/objects/Snapshot__c/fields/OpptyProductContractTerm__c.field-meta.xml
<CustomField>
    <fullName>OpptyProductContractTerm__c</fullName>
    <label>Oppty Product - Contract Term</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>