force-app/main/default/objects/Snapshot__c/fields/OpptyProductExistingSvs__c.field-meta.xml
<CustomField>
    <fullName>OpptyProductExistingSvs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oppty Product - Existing Svs</label>
    <type>Checkbox</type>
</CustomField>