force-app/main/default/objects/Snapshot__c/fields/OpptyProductProductCode__c.field-meta.xml
<CustomField>
    <fullName>OpptyProductProductCode__c</fullName>
    <label>Oppty Product - Product Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>