force-app/main/default/objects/Snapshot__c/fields/OpptyProductProductMRRconverted__c.field-meta.xml
<CustomField>
    <fullName>OpptyProductProductMRRconverted__c</fullName>
    <label>Oppty Product - Product MRR (converted)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>