force-app/main/default/objects/Snapshot__c/fields/OpptyProductQuantity__c.field-meta.xml
<CustomField>
    <fullName>OpptyProductQuantity__c</fullName>
    <label>Oppty Product - Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>