force-app/main/default/objects/Snapshot__c/fields/OpptyProductUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>OpptyProductUnitPrice__c</fullName>
    <label>Oppty Product - Unit Price (converted)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>