force-app/main/default/objects/Snapshot__c/fields/OpptyTotalACVconverted__c.field-meta.xml
<CustomField>
    <fullName>OpptyTotalACVconverted__c</fullName>
    <label>Oppty Total ACV (converted)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>