force-app/main/default/objects/Snapshot__c/fields/OpptyTotalNRRconverted__c.field-meta.xml
<CustomField>
    <fullName>OpptyTotalNRRconverted__c</fullName>
    <label>Oppty Total NRR (converted)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>