force-app/main/default/objects/Snapshot__c/fields/OpptyTotalTCVconverted__c.field-meta.xml
<CustomField>
    <fullName>OpptyTotalTCVconverted__c</fullName>
    <label>Oppty Total TCV (converted)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>