force-app/main/default/objects/Snapshot__c/fields/OpptyType__c.field-meta.xml
<CustomField>
    <fullName>OpptyType__c</fullName>
    <label>Oppty Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>