force-app/main/default/objects/Snapshot__c/fields/Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case__c</fullName>
    <label>Parent Case #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>